--- a/src/components/AppContainer/AppContainer.scss
+++ b/src/components/AppContainer/AppContainer.scss
@@ -11,7 +11,7 @@
 
 .background-image {
   width: 100%;
-  height: 69vh;
+  height: 561px;
   background-size: cover;
   background-position-x: center;
   background-position-y: center;
@@ -40,18 +40,6 @@
   margin-top: 48vh;
   span{
     font-weight: 300;
-  }
-}
-
-@media screen and (min-width: 480px) {
-  .background-image {
-    height: 63vh;
-  }
-}
-
-@media screen and (min-width: 700px) {
-  .background-image {
-    height: 55vh;
   }
 }
 
