--- a/src/components/ActiveMovie/ActiveMovie.scss
+++ b/src/components/ActiveMovie/ActiveMovie.scss
@@ -34,7 +34,7 @@
 .main-play-button {
   width: 248px;
   height: 56px;
-  margin:16px auto 0;
+  margin: 16px auto 0;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -46,8 +46,14 @@
   letter-spacing: 4px;
   color: #ffffff;
   background-color: #242424;
-  border:none;
+  border: none;
   cursor: pointer;
+  transition: background 0.3s ease-in;
+  
+  &:hover{
+    background: #121212;
+    
+  }
 }
 
 .main-play-icon {
@@ -79,6 +85,12 @@
   background-color: #24242480;
   border: solid 1px #ffffff80;
   cursor: pointer;
+  transition: background 0.3s ease-in;
+  
+  &:hover{
+    background: #242424;
+    
+  }
 }
 
 @media screen and (min-width: 375px) {
