--- a/src/components/ActiveMovie/ActiveMovie.scss
+++ b/src/components/ActiveMovie/ActiveMovie.scss
@@ -2,16 +2,19 @@
   margin: 26.4vh auto 0;
   text-align: center;
   padding: 0 24px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.liteflix-original{
-  margin:0 0 16px 0;
+.liteflix-original {
+  margin: 0 0 16px 0;
   font-family: "bebas-neue-by-fontfabric", sans-serif;
   font-size: 20px;
   font-weight: 200;
   line-height: 20px;
   letter-spacing: 4px;
-  color:#ffffff;
+  color: #ffffff;
 }
 
 .active-movie-title {
@@ -21,11 +24,11 @@
   line-height: 60px;
   letter-spacing: 10px;
   margin: 0;
-  color: #64EEBC;
+  color: #64eebc;
   width: fit-content;
 }
 
-.movie-title-reduced{
+.movie-title-reduced {
   font-size: 40px;
   line-height: 50px;
   letter-spacing: 7px;
@@ -50,10 +53,9 @@
   border: none;
   cursor: pointer;
   transition: background 0.3s ease-in;
-  
-  &:hover{
+
+  &:hover {
     background: #121212;
-    
   }
 }
 
@@ -69,10 +71,10 @@
   margin-right: 12px;
 }
 
-.add-to-list-button{
+.add-to-list-button {
   width: 248px;
   height: 56px;
-  margin:16px auto 0;
+  margin: 16px auto 0;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -87,10 +89,9 @@
   border: solid 1px #ffffff80;
   cursor: pointer;
   transition: background 0.3s ease-in;
-  
-  &:hover{
+
+  &:hover {
     background: #242424;
-    
   }
 }
 
@@ -101,7 +102,7 @@
     letter-spacing: 12px;
   }
 
-  .movie-title-reduced{
+  .movie-title-reduced {
     font-size: 48px;
     line-height: 50px;
     letter-spacing: 8px;
@@ -121,63 +122,62 @@
     letter-spacing: 12px;
   }
 
-  .movie-title-reduced{
+  .movie-title-reduced {
     font-size: 55px;
     line-height: 59px;
     letter-spacing: 9px;
   }
-
 }
 
 @media screen and (min-width: 900px) {
   .active-movie-container {
     margin: 50vh 0 5.6vh 6.9vw;
-    text-align: left;
+    align-items: start;
   }
-  
-  .liteflix-original{
-    margin:0 0 24px 5px;
-    text-align: left;
+
+  .liteflix-original {
+    margin: 0 0 24px 5px;
   }
-  
+
   .active-movie-title {
-    width: 63.4vw;
     font-size: 90px;
     line-height: 75px;
     letter-spacing: 13px;
   }
 
-  .movie-title-reduced{
+  .liteflix-original {
+    align-self: start;
+  }
+
+  .movie-title-reduced {
     font-size: 64px;
     line-height: 65px;
     letter-spacing: 10px;
   }
-  
-  .buttons{
+
+  .buttons {
     display: flex;
     flex-direction: row;
-    margin:32px 0 0 5px;
+    margin: 32px 0 0 5px;
   }
-  
+
   .main-play-button {
-    margin:0 24px 0 0;
+    margin: 0 24px 0 0;
   }
-  
-  .add-to-list-button{
-    margin:0
+
+  .add-to-list-button {
+    margin: 0;
   }
-  
 }
 
 @media screen and (min-width: 1366px) {
-  
   .active-movie-title {
     font-size: 120px;
     line-height: 100px;
     letter-spacing: 16px;
   }
 
-  .movie-title-reduced{
+  .movie-title-reduced {
     font-size: 75px;
     line-height: 75px;
     letter-spacing: 12px;
