--- a/src/components/AppContainer/AppContainer.css
+++ b/src/components/AppContainer/AppContainer.css
@@ -11,7 +11,7 @@
 
 .background-image {
   width: 100%;
-  height: 69vh;
+  height: 561px;
   background-size: cover;
   background-position-x: center;
   background-position-y: center;
@@ -43,24 +43,19 @@
   font-weight: 300;
 }
 
-@media screen and (min-width: 480px) {
-  .background-image {
-    height: 63vh;
-  }
-}
-@media screen and (min-width: 700px) {
-  .background-image {
-    height: 55vh;
-  }
-}
 @media screen and (min-width: 900px) {
-  .body {
-    display: flex;
-    justify-content: space-between;
-  }
   .background-image {
     height: 100%;
     background-position: center;
+  }
+  .gradient-overlay {
+    height: 60vh;
+  }
+}
+@media screen and (min-width: 1366px) {
+  .body {
+    display: flex;
+    justify-content: space-between;
   }
   .gradient-overlay {
     display: none;
