--- a/src/components/ActiveMovie/ActiveMovie.css
+++ b/src/components/ActiveMovie/ActiveMovie.css
@@ -1,6 +1,10 @@
 .active-movie-container {
-  margin: 26.4vh 6.4vw 0;
+  margin: 26.4vh auto 0;
   text-align: center;
+  padding: 0 24px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .liteflix-original {
@@ -15,18 +19,22 @@
 
 .active-movie-title {
   font-family: "bebas-neue-by-fontfabric", sans-serif;
-  font-size: 76px;
+  font-size: 60px;
   font-weight: 700;
-  line-height: 77.5px;
-  letter-spacing: 12px;
+  line-height: 60px;
+  letter-spacing: 10px;
   margin: 0;
-  color: #64EEBC;
+  color: #64eebc;
+  width: -moz-fit-content;
+  width: fit-content;
 }
 
 .movie-title-reduced {
   font-size: 40px;
   line-height: 50px;
   letter-spacing: 7px;
+  width: -moz-fit-content;
+  width: fit-content;
 }
 
 .main-play-button {
@@ -46,6 +54,10 @@
   background-color: #242424;
   border: none;
   cursor: pointer;
+  transition: background 0.3s ease-in;
+}
+.main-play-button:hover {
+  background: #121212;
 }
 
 .main-play-icon {
@@ -77,31 +89,60 @@
   background-color: rgba(36, 36, 36, 0.5019607843);
   border: solid 1px rgba(255, 255, 255, 0.5019607843);
   cursor: pointer;
+  transition: background 0.3s ease-in;
+}
+.add-to-list-button:hover {
+  background: #242424;
 }
 
+@media screen and (min-width: 375px) {
+  .active-movie-title {
+    font-size: 76px;
+    line-height: 77.5px;
+    letter-spacing: 12px;
+  }
+  .movie-title-reduced {
+    font-size: 48px;
+    line-height: 50px;
+    letter-spacing: 8px;
+  }
+}
 @media screen and (min-width: 480px) {
   .activeMovieContainer {
     margin: 26.4vh 10vw 0;
   }
 }
+@media screen and (min-width: 650px) {
+  .active-movie-title {
+    font-size: 83px;
+    line-height: 75px;
+    letter-spacing: 12px;
+  }
+  .movie-title-reduced {
+    font-size: 55px;
+    line-height: 59px;
+    letter-spacing: 9px;
+  }
+}
 @media screen and (min-width: 900px) {
   .active-movie-container {
     margin: 50vh 0 5.6vh 6.9vw;
-    text-align: left;
+    align-items: start;
   }
   .liteflix-original {
     margin: 0 0 24px 5px;
-    text-align: left;
   }
   .active-movie-title {
-    width: 63.4vw;
-    font-size: 120px;
-    line-height: 100px;
-    letter-spacing: 16px;
+    font-size: 90px;
+    line-height: 75px;
+    letter-spacing: 13px;
+  }
+  .liteflix-original {
+    align-self: start;
   }
   .movie-title-reduced {
     font-size: 64px;
-    line-height: 70px;
+    line-height: 65px;
     letter-spacing: 10px;
   }
   .buttons {
@@ -116,3 +157,15 @@
     margin: 0;
   }
 }
+@media screen and (min-width: 1366px) {
+  .active-movie-title {
+    font-size: 120px;
+    line-height: 100px;
+    letter-spacing: 16px;
+  }
+  .movie-title-reduced {
+    font-size: 75px;
+    line-height: 75px;
+    letter-spacing: 12px;
+  }
+}/*# sourceMappingURL=ActiveMovie.css.map */
