--- a/src/components/MovieList/MovieList.css
+++ b/src/components/MovieList/MovieList.css
@@ -1,5 +1,6 @@
 .movie-list {
-  width: 87.2vw;
+  width: -moz-fit-content;
+  width: fit-content;
   margin: 7.9vh auto 0;
   box-sizing: border-box;
 }
@@ -26,6 +27,7 @@
   width: 100vw;
   height: 112px;
   position: fixed;
+  bottom: 0;
   z-index: 2;
   padding: 32px 24px;
   box-sizing: border-box;
@@ -58,7 +60,6 @@
 .movie-list .movie-thumbnails {
   display: flex;
   flex-direction: column;
-  overflow: hidden;
 }
 .movie-list .first-movie-thumbnail {
   margin: 32px auto 20px;
@@ -90,6 +91,66 @@
   flex-direction: column;
   justify-content: flex-end;
   overflow: hidden;
+  transition: background 0.3s ease-in;
+}
+.movie-list .thumbnail-overlay .play-title {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  overflow: hidden;
+  color: transparent;
+  transition: 0.3s;
+}
+.movie-list .thumbnail-overlay .list-play-button {
+  width: 48px;
+  height: 48px;
+  margin: 0 auto 24px;
+  background: url("../../../public/img/popular-play.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  z-index: 1;
+}
+.movie-list .thumbnail-overlay .movie-title {
+  font-family: "bebas-neue-by-fontfabric";
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 16px;
+  letter-spacing: 4px;
+  text-align: center;
+  color: #ffffff;
+  margin: 0 0 32px;
+  z-index: 1;
+}
+.movie-list .thumbnail-overlay .rating-release {
+  display: none;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  overflow: hidden;
+  margin: 16px 24px 24px 24px;
+}
+.movie-list .thumbnail-overlay .star {
+  width: 12px;
+  height: 12px;
+  margin-right: 6px;
+}
+.movie-list .thumbnail-overlay .rating {
+  font-family: "bebas-neue-by-fontfabric";
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 12px;
+  letter-spacing: 2px;
+  color: #ffffff;
+  display: flex;
+  align-items: center;
+}
+.movie-list .thumbnail-overlay .release {
+  font-family: "bebas-neue-by-fontfabric";
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 12px;
+  letter-spacing: 2px;
+  color: #ffffff;
 }
 .movie-list .thumbnail-overlay .thumbnail-gradient-overlay {
   background: linear-gradient(180deg, rgba(0, 0, 0, 0) 22.78%, #000000 122.69%);
@@ -99,47 +160,74 @@
   bottom: 0;
   left: 0;
 }
-.movie-list .thumbnail-overlay .list-play-button {
-  width: 48px;
-  height: 48px;
-  margin: 52px auto 24px;
-  background-color: transparent;
-  z-index: 1;
+.movie-list .thumbnail-overlay:hover {
+  background: rgba(36, 36, 36, 0.6980392157);
+  padding: 0;
 }
-.movie-list .thumbnail-overlay .movie-title {
-  font-family: "bebas-neue-by-fontfabric";
-  font-size: 16px;
-  font-weight: 300;
-  line-height: 16px;
-  letter-spacing: 4px;
-  text-align: center;
-  color: #ffffff;
-  margin: 0 0 32px;
-  z-index: 1;
+.movie-list .thumbnail-overlay:hover .play-title {
+  display: flex;
+  flex-direction: row;
+  justify-content: start;
+  align-items: center;
+  overflow: hidden;
+  margin-bottom: 20px;
+  width: 100%;
+}
+.movie-list .thumbnail-overlay:hover .play-title .list-play-button {
+  width: 32px;
+  height: 32px;
+  margin: 0 16px 0 24px;
+}
+.movie-list .thumbnail-overlay:hover .play-title .list-play-button:hover {
+  background: url("../../../public/img/play-hover.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+.movie-list .thumbnail-overlay:hover .play-title .movie-title {
+  width: 243px;
+  margin: 0;
+  text-align: start;
+}
+.movie-list .thumbnail-overlay:hover .rating-release {
+  display: flex;
+}
+.movie-list .thumbnail-overlay:hover .thumbnail-gradient-overlay {
+  display: none;
 }
 
-@media screen and (max-width: 479px) {
-  .dropdown-options {
-    left: 0;
-    bottom: 0;
-  }
-}
-@media screen and (min-width: 900px) {
-  .movie-list {
-    width: 220px;
-    height: 746.8px;
-    margin: 8.6vh 7.2vw 0;
-  }
+@media screen and (min-width: 480px) {
   .movie-list .dropdown-options {
-    width: 241px;
+    width: 300px;
     height: 102px;
-    background: url("../../../public/img/dropdown.png");
-    background-size: cover;
     position: absolute;
-    right: 7.2vw;
+    left: 50%;
+    bottom: initial;
     margin-top: 8px;
     padding: 30px 24px 24px;
     box-sizing: border-box;
+    transform: translate(-50%);
+  }
+}
+@media screen and (min-width: 700px) {
+  .movie-list {
+    width: 87.2vw;
+  }
+  .movie-list .movie-thumbnails {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    overflow: hidden;
+    flex-wrap: wrap;
+    padding-bottom: 7.9vh;
+  }
+  .movie-list .first-movie-thumbnail {
+    margin: 28px 20px 0 0;
+  }
+  .movie-list .movie-thumbnail {
+    margin: 28px 20px 0 0;
+  }
+  .movie-list .last-movie-thumbnail {
+    margin: 28px 20px 0 0;
   }
   .movie-list .thumbnail-image {
     width: 220px;
@@ -156,12 +244,61 @@
   .movie-list .thumbnail-overlay .list-play-button {
     width: 40px;
     height: 40px;
-    margin: 53px auto 23px;
+    margin: 0 auto 23px;
   }
   .movie-list .thumbnail-overlay .movie-title {
     margin: 0 0 14px;
   }
-  .movie-list::-webkit-scrollbar {
-    width: 0;
+  .movie-list .thumbnail-overlay .rating-release {
+    margin: 0 16px 16px 16px;
+  }
+  .movie-list .thumbnail-overlay:hover .play-title {
+    margin-bottom: 20px;
+  }
+  .movie-list .thumbnail-overlay:hover .play-title .list-play-button {
+    width: 24px;
+    height: 24px;
+    margin: 0 12px 0 16px;
+  }
+  .movie-list .thumbnail-overlay:hover .play-title .movie-title {
+    width: 152px;
+  }
+}
+@media screen and (min-width: 1101px) {
+  .movie-list .last-movie-thumbnail {
+    margin: 28px 0 0 0;
+  }
+}
+@media screen and (min-width: 1366px) {
+  .movie-list {
+    width: 220px;
+    height: 746.8px;
+    margin: 80px 7.2vw 0;
+  }
+  .movie-list .movie-thumbnails {
+    flex-direction: column;
+    padding-bottom: 0;
+  }
+  .movie-list .dropdown-options {
+    width: 241px;
+    height: 102px;
+    background: url("../../../public/img/dropdown.png");
+    background-size: cover;
+    position: absolute;
+    left: initial;
+    right: 7.2vw;
+    transform: initial;
+    margin-top: 8px;
+    padding: 30px 24px 24px;
+    box-sizing: border-box;
+  }
+  .movie-list .first-movie-thumbnail {
+    margin: 32px auto 20px;
+  }
+  .movie-list .movie-thumbnail {
+    margin: 0 auto 20px;
+  }
+  .movie-list .last-movie-thumbnail {
+    margin: 0 auto 52px;
   }
 }/*# sourceMappingURL=MovieList.css.map */
