--- a/src/components/ProfileComponent/ProfileComponent.scss
+++ b/src/components/ProfileComponent/ProfileComponent.scss
@@ -1,6 +1,7 @@
 .profile {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     width: 125px;
     &__notification {
         margin-right: 40px;
