--- a/src/components/AppContainer/AppContainer.scss
+++ b/src/components/AppContainer/AppContainer.scss
@@ -1,67 +1,77 @@
-.app-container {
-  position: relative;
-  background: #242424;
-  min-height: 100vh;
-}
+$font-family: "bebas-neue-by-fontfabric", sans-serif;
+$linear-gradient: linear-gradient(180deg, rgba(36, 36, 36, 0) 0%, #242424 100%);
 
-.content-container {
-  position: relative;
-  z-index: 1;
-}
-
-.background-image {
-  width: 100%;
-  height: 561px;
-  background-size: cover;
-  background-position-x: center;
-  background-position-y: center;
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-
-.gradient-overlay {
-  background: linear-gradient(180deg, rgba(36, 36, 36, 0) 0%, #242424 100%);
-  height: 23.8vh;
-  width: 100%;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-}
-
-.loading-message{
-  font-family: "bebas-neue-by-fontfabric", sans-serif;
+.app-container__loading-message {
+  font-family: $font-family;
   font-size: 28px;
   font-weight: 700;
   line-height: 28px;
   letter-spacing: 4px;
   text-align: center;
-  color: #64EEBC;
+  color: #64eebc;
   margin-top: 48vh;
-  span{
+  span {
     font-weight: 300;
   }
 }
 
-@media screen and (min-width: 900px) {
+.app-container {
+  position: relative;
+  background: #242424;
+  min-height: 100vh;
 
-  .background-image {
+  &__content {
+    position: relative;
+    z-index: 1;
+  }
+
+  &__body {
+    padding: 28vh 7% 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  &__background {
+    width: 100%;
+    height: 60vh;
+    background-size: cover;
+    background-position: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+
+  &__gradient-overlay {
+    background: $linear-gradient;
+    height: 23.8vh;
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+  }
+}
+
+@media screen and (min-width: 900px) {
+  .app-container__background {
+    height: 65vh;
+    background-position: center;
+  }
+}
+
+@media screen and (min-width: 1366px) {
+  .app-container__body {
+    padding: 8vh 7% 8vh;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: end;
+  }
+  .app-container__background {
     height: 100%;
     background-position: center;
   }
 
-  .gradient-overlay {
-    height: 60vh;
-  }
-
-}
-
-@media screen and (min-width: 1366px) {
-  .body{
-    display: flex;
-    justify-content: space-between;
-  }
-  .gradient-overlay {
+  .app-container__gradient-overlay {
     display: none;
   }
 }
