--- a/src/components/Menu/Menu.scss
+++ b/src/components/Menu/Menu.scss
@@ -1,4 +1,8 @@
-.background {
+$font-family: "bebas-neue-by-fontfabric", sans-serif;
+$bg-color: #242424;
+$letter-spacing: 4px;
+
+.menu{
   width: 100vw;
   height: 100vh;
   background: #00000068;
@@ -6,148 +10,106 @@
   top: 0;
   left: 0;
   z-index: 3;
-}
+  overflow-y: scroll;
 
-.menu-dropdown {
+
+&__dropdown {
   width: 100vw;
   min-height: 100vh;
-  background-color: #242424;
-  padding: 2vh 6.4vw 2vh;
-  overflow: scroll;
+  background-color: $bg-color;
+
+  &::-webkit-scrollbar {
+    width: 0px;
+  }
 }
 
-.menu-dropdown::-webkit-scrollbar {
-  width: 0px;
-}
-
-.menu-header {
+&__content {
   width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 7.7vh;
-}
-
-.close-button {
-  width: 15px;
-  height: 15px;
-  margin-right: 12px;
-  cursor: pointer;
-}
-
-.menu-logo {
-  font-family: "bebas-neue-by-fontfabric", sans-serif;
-  font-size: 28px;
-  font-weight: 700;
-  line-height: 28px;
-  letter-spacing: 4px;
-  text-align: center;
-  color: #64EEBC;
-}
-
-.menu-logo2{
-  font-weight: 300;
-}
-
-.notification-icon{
-  display: none;
-}
-
-.content {
-  width: 100%;
+  padding: 64px 7% 48px;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  font-family: "bebas-neue-by-fontfabric", sans-serif;
+  font-family: $font-family;
   font-size: 16px;
   font-weight: 200;
   line-height: 16px;
-  letter-spacing: 4px;
+  letter-spacing: $letter-spacing;
   color: #ffffff;
 }
 
-.options p {
-  margin: 0 0 4.9vh 0;
+&__options p {
+  margin: 0 0 40px 0;
 }
 
-.menu-add-movie {
-  font-family: "bebas-neue-by-fontfabric", sans-serif;
+&__add-movie {
+  font-family: $font-family;
   font-size: 16px;
   font-weight: 700;
   line-height: 16px;
-  letter-spacing: 4px;
+  letter-spacing: $letter-spacing;
   color: #ffffff;
   background: transparent;
   border: none;
   display: flex;
-  margin: 3vh 0 7.9vh;
+  margin: 24px 0 64px;
   padding: 0;
   align-items: center;
 }
 
-.menu-plus-icon {
+&__plus-icon {
   width: 14px;
   height: 14px;
   margin: 0 12px 1px 0;
 }
+}
 
 @media screen and (min-width: 900px) {
-
-  .menu-dropdown {
+  .menu {
+  &__dropdown {
     width: 53vw;
     height: 100vh;
     position: fixed;
     top: 0;
     right: 0;
-    padding: 3.4vh 7.2vw 3.4vh 6.1vw;
-    background-color: #242424;
+    padding: 32px 7% 82px 6.1%;
+    background-color: $bg-color;
     display: flex;
     flex-direction: column;
     align-items: center;
+    overflow-y: scroll;
   }
 
-  .menu-header {
+  &__header {
     width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
   }
 
-  .section-menu{
-    justify-content: end;
-  }
-
-  .close-button {
+  &__close-button {
     width: 18px;
     height: 18px;
+    cursor: pointer;
   }
 
-  .menu-logo{
-    display: none;
-  }
-
-  .notification-icon{
-    display: block;
-  }
-
-  .content {
+  &__content {
     font-size: 22px;
     line-height: 22px;
+    padding: 85px 0 0;
   }
 
-  .options p {
-    margin: 0 0 4.3vh 0;
-  }
-
-  .menu-add-movie {
+  &__add-movie {
     font-size: 22px;
     line-height: 22px;
-    letter-spacing: 4px;
+    letter-spacing: $letter-spacing;
     color: #ffffff;
-    margin: 3.4vh 0 7.7vh;
-    padding: 0;
+    margin: 32px 0 72px;
   }
 
-  .menu-plus-icon {
+  &__plus-icon {
     width: 14px;
     height: 14px;
     margin: 0px 12px 2px 0px;
   }
+}
 }
