--- a/src/components/MovieList/MovieList.scss
+++ b/src/components/MovieList/MovieList.scss
@@ -1,30 +1,32 @@
+$font-family: "bebas-neue-by-fontfabric", sans-serif;
+$primary-color: #ffffff;
+
 .movie-list {
   width: fit-content;
-  margin: 7.9vh auto 0;
   box-sizing: border-box;
 
-  .popular-link {
-    font-family: "bebas-neue-by-fontfabric";
+  &__popular-link {
+    font-family: $font-family;
     font-size: 18px;
     font-weight: 200;
     line-height: 18px;
     letter-spacing: 4px;
     display: block;
-    color: #ffffff;
+    color: $primary-color;
     background: transparent;
     border: none;
     margin: 0 auto 0;
     padding: 0;
   }
 
-  .dropdown-arrow {
+  &__dropdown-arrow {
     margin: 4px 0 0 11px;
     vertical-align: top;
     width: 13px;
     height: 8px;
   }
 
-  .dropdown-options {
+  &__dropdown-options {
     width: 100vw;
     height: 112px;
     position: fixed;
@@ -36,61 +38,61 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-
-    .dropdown-option-container {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-
-    .dropdown-option {
-      position: relative;
-      font-family: "bebas-neue-by-fontfabric";
-      font-size: 16px;
-      font-weight: 200;
-      line-height: 16px;
-      letter-spacing: 4px;
-      color: #ffffff;
-      z-index: 1;
-      cursor: pointer;
-      margin: 0;
-    }
-
-    .vector {
-      width: 12px;
-      height: 8px;
-    }
+    box-shadow: 4px 10px 10px 2px rgba(0, 0, 0, 0.5)
+  }
+  &__dropdown-option-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
   }
 
-  .movie-thumbnails {
+  &__dropdown-option {
+    position: relative;
+    font-family: $font-family;
+    font-size: 16px;
+    font-weight: 200;
+    line-height: 16px;
+    letter-spacing: 4px;
+    color: $primary-color;
+    z-index: 1;
+    cursor: pointer;
+    margin: 0;
+  }
+
+  &__vector {
+    width: 12px;
+    height: 8px;
+  }
+
+  &__movie-thumbnails {
     display: flex;
     flex-direction: column;
   }
 
-  .first-movie-thumbnail {
+  &__first-movie-thumbnail {
     margin: 32px auto 20px;
     position: relative;
     cursor: pointer;
   }
 
-  .movie-thumbnail {
+  &__movie-thumbnail {
     margin: 0 auto 20px;
     position: relative;
     cursor: pointer;
   }
 
-  .last-movie-thumbnail {
+  &__last-movie-thumbnail {
     margin: 0 auto 52px;
     position: relative;
     cursor: pointer;
   }
 
-  .thumbnail-image {
+  &__thumbnail-image {
     width: 327px;
     height: 172px;
   }
 
-  .thumbnail-overlay {
+  &__thumbnail-overlay {
     position: absolute;
     width: 327px;
     padding: 0 5px;
@@ -102,94 +104,92 @@
     justify-content: flex-end;
     overflow: hidden;
     transition: background 0.3s ease-in;
-
-    .play-title {
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-end;
-      overflow: hidden;
-      color:transparent;
-      transition:0.3s;
-    }
-
-    .list-play-button {
-      width: 48px;
-      height: 48px;
-      margin: 0 auto 24px;
-      background: url("../../../public/img/popular-play.png");
-      background-size: contain;
-      background-repeat: no-repeat;
-      z-index: 1;
-    }
-
-    .movie-title {
-      font-family: "bebas-neue-by-fontfabric";
-      font-size: 16px;
-      font-weight: 400;
-      line-height: 16px;
-      letter-spacing: 4px;
-      text-align: center;
-      color: #ffffff;
-      margin: 0 0 32px;
-      z-index: 1;
-    }
-
-    .rating-release {
-      display: none;
-      flex-direction: row;
-      justify-content: space-between;
-      align-items: center;
-      overflow: hidden;
-      margin: 16px 24px 24px 24px;
-    }
-
-    .star {
-      width: 12px;
-      height: 12px;
-      margin-right: 6px;
-    }
-
-    .rating {
-      font-family: "bebas-neue-by-fontfabric";
-      font-weight: 400;
-      font-size: 14px;
-      line-height: 12px;
-      letter-spacing: 2px;
-      color: #ffffff;
-      display: flex;
-      align-items: center;
-    }
-
-    .release {
-      font-family: "bebas-neue-by-fontfabric";
-      font-weight: 400;
-      font-size: 14px;
-      line-height: 12px;
-      letter-spacing: 2px;
-      color: #ffffff;
-    }
-
-    .thumbnail-gradient-overlay {
-      background: linear-gradient(
-        180deg,
-        rgba(0, 0, 0, 0) 22.78%,
-        #000000 122.69%
-      );
-      width: 327px;
-      height: 126px;
-      position: absolute;
-      bottom: 0;
-      left: 0;
-    }
+  }
+  &__play-title {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    overflow: hidden;
+    color: transparent;
+    transition: 0.3s;
   }
 
-  .thumbnail-overlay:hover {
+  &__play-button {
+    width: 48px;
+    height: 48px;
+    margin: 0 auto 24px;
+    background: url("../../../public/img/popular-play.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    z-index: 1;
+  }
+
+  &__movie-title {
+    font-family: $font-family;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 16px;
+    letter-spacing: 4px;
+    text-align: center;
+    color: $primary-color;
+    margin: 0 0 32px;
+    z-index: 1;
+  }
+
+  &__rating-release {
+    display: none;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    overflow: hidden;
+    margin: 16px 24px 24px 24px;
+  }
+
+  &__star {
+    width: 12px;
+    height: 12px;
+    margin-right: 6px;
+  }
+
+  &__rating {
+    font-family: $font-family;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 12px;
+    letter-spacing: 2px;
+    color: $primary-color;
+    display: flex;
+    align-items: center;
+  }
+
+  &__release {
+    font-family: $font-family;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 12px;
+    letter-spacing: 2px;
+    color: $primary-color;
+  }
+
+  &__thumbnail-gradient-overlay {
+    background: linear-gradient(
+      180deg,
+      rgba(0, 0, 0, 0) 22.78%,
+      #000000 122.69%
+    );
+    width: 327px;
+    height: 126px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+  }
+
+  &__thumbnail-overlay:hover {
     background: #242424b2;
     padding: 0;
-    
   }
 
-  .thumbnail-overlay:hover .play-title {
+  &__thumbnail-overlay:hover .movie-list__play-title {
     display: flex;
     flex-direction: row;
     justify-content: start;
@@ -198,42 +198,41 @@
     margin-bottom: 20px;
     width: 100%;
 
-    .list-play-button {
+    .movie-list__play-button {
       width: 32px;
       height: 32px;
       margin: 0 16px 0 24px;
-      
+
       &:hover {
         background: url("../../../public/img/play-hover.png");
         background-size: contain;
         background-repeat: no-repeat;
       }
     }
-    .movie-title {
+    .movie-list__movie-title {
       width: 243px;
       margin: 0;
       text-align: start;
     }
   }
 
-  .thumbnail-overlay:hover .rating-release {
+  &__thumbnail-overlay:hover .movie-list__rating-release {
     display: flex;
   }
+  
 
-  .thumbnail-overlay:hover .thumbnail-gradient-overlay {
+  &__thumbnail-overlay:hover .movie-list__thumbnail-gradient-overlay {
     display: none;
   }
 }
-
 @media screen and (min-width: 480px) {
   .movie-list {
-    .dropdown-options {
+    &__dropdown-options {
       width: 300px;
       height: 102px;
       position: absolute;
       left: 50%;
       bottom: initial;
-      margin-top: 8px;
       padding: 30px 24px 24px;
       box-sizing: border-box;
       transform: translate(-50%);
@@ -245,7 +244,7 @@
   .movie-list {
     width: 87.2vw;
 
-    .movie-thumbnails {
+    &__movie-thumbnails {
       display: flex;
       flex-direction: row;
       justify-content: space-evenly;
@@ -254,56 +253,56 @@
       padding-bottom: 7.9vh;
     }
 
-    .first-movie-thumbnail {
+    &__first-movie-thumbnail {
       margin: 28px 20px 0 0;
     }
 
-    .movie-thumbnail {
+    &__movie-thumbnail {
       margin: 28px 20px 0 0;
     }
 
-    .last-movie-thumbnail {
+    &__last-movie-thumbnail {
       margin: 28px 20px 0 0;
     }
 
-    .thumbnail-image {
+    &__thumbnail-image {
       width: 220px;
       height: 146px;
     }
 
-    .thumbnail-overlay {
+    &__thumbnail-overlay {
       width: 220px;
       padding: 0 10px;
-
-      .thumbnail-gradient-overlay {
-        width: 220px;
-        height: 100px;
-      }
-
-      .list-play-button {
-        width: 40px;
-        height: 40px;
-        margin: 0 auto 23px;
-      }
-
-      .movie-title {
-        margin: 0 0 14px;
-      }
-
-      .rating-release {
-        margin: 0 16px 16px 16px;
-      }
     }
 
-    .thumbnail-overlay:hover .play-title {
+    &__thumbnail-gradient-overlay {
+      width: 220px;
+      height: 100px;
+    }
+
+    &__play-button {
+      width: 40px;
+      height: 40px;
+      margin: 0 auto 23px;
+    }
+
+    &__movie-title {
+      margin: 0 0 14px;
+    }
+
+    &__rating-release {
+      margin: 0 16px 16px 16px;
+    }
+
+    &__thumbnail-overlay:hover .movie-list__play-title {
       margin-bottom: 20px;
 
-      .list-play-button {
+      .movie-list__play-button {
         width: 24px;
         height: 24px;
         margin: 0 12px 0 16px;
       }
-      .movie-title {
+      .movie-list__movie-title {
         width: 152px;
       }
     }
@@ -312,7 +311,7 @@
 
 @media screen and (min-width: 1101px) {
   .movie-list {
-    .last-movie-thumbnail {
+    &__last-movie-thumbnail {
       margin: 28px 0 0 0;
     }
   }
@@ -321,38 +320,37 @@
 @media screen and (min-width: 1366px) {
   .movie-list {
     width: 220px;
-    height: 746.8px;
-    margin: 80px 7.2vw 0;
+    min-height: 695px;
 
-    .movie-thumbnails {
+    &__movie-thumbnails {
       flex-direction: column;
       padding-bottom: 0;
     }
 
-    .dropdown-options {
+    &__dropdown-options {
       width: 241px;
       height: 102px;
       background: url("../../../public/img/dropdown.png");
       background-size: cover;
       position: absolute;
       left: initial;
-      right: 7.2vw;
+      right: 6.9%;
       transform: initial;
       margin-top: 8px;
       padding: 30px 24px 24px;
       box-sizing: border-box;
     }
 
-    .first-movie-thumbnail {
+    &__first-movie-thumbnail {
       margin: 32px auto 20px;
     }
 
-    .movie-thumbnail {
+    &__movie-thumbnail {
       margin: 0 auto 20px;
     }
 
-    .last-movie-thumbnail {
-      margin: 0 auto 52px;
+    &__last-movie-thumbnail {
+      margin: 0;
     }
   }
 }
