--- a/src/components/AddMovie/AddMovie.scss
+++ b/src/components/AddMovie/AddMovie.scss
@@ -1,3 +1,5 @@
+// styling bootstrap native classes
+
 div.modal-dialog {
   max-width: 100vw;
   width: 100vw;
@@ -5,83 +7,74 @@ div.modal-dialog {
   display: flex;
   justify-content: center;
   align-items: center;
-}
 
-div.modal-content {
-  width: 100vw;
-  min-height: 100vh;
-  background: #242424;
-  color: #ffffff;
-  border: none;
-  border-radius: 0;
-  padding: 2vh 6.4vw 0;
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: column;
-
-  div.modal-header {
+  div.modal-content {
+    width: 100vw;
+    min-height: 100vh;
+    background: #242424;
+    color: #ffffff;
     border: none;
+    border-radius: 0;
+    box-sizing: border-box;
     display: flex;
     flex-direction: column;
-    padding: 0;
+  }
+}
+
+.add-movie {
+  &__content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 
-  div.modal-title {
+  &__title {
     font-family: "bebas-neue-by-fontfabric", sans-serif;
     font-size: 22px;
     font-weight: 400;
     line-height: 22px;
     letter-spacing: 4px;
     color: #64eebc;
-    margin-bottom: 8.9vh;
+    margin: 96px 0 0;
   }
 
-  .body-modal {
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .container {
+  &__container {
     width: 87.2vw;
     height: 10vh;
     border: 1px dashed #ffffff;
     padding: 0 10px;
-    margin: 0;
+    margin-top: 72px;
     box-sizing: border-box;
     display: flex;
     justify-content: center;
     align-items: center;
 
-    .add-label {
+    &-label {
       display: flex;
+      align-items: center;
       cursor: pointer;
-    }
-
-    p {
       font-family: "bebas-neue-by-fontfabric", sans-serif;
       font-size: 16px;
       font-weight: 400;
       line-height: 28px;
       letter-spacing: 4px;
-      text-align: center;
-      margin: 0;
     }
 
-    .clip {
+    &-clip {
+      width: 16px;
+      height: 16px;
       margin-right: 16px;
     }
   }
 
-  .divider {
+  &__divider {
     width: 248px;
     margin-top: 6.9vh;
     border-bottom: 1px solid #ffffff;
     box-sizing: border-box;
     overflow: hidden;
 
-    p {
+    &-title {
       font-family: "bebas-neue-by-fontfabric", sans-serif;
       font-size: 16px;
       font-weight: 400;
@@ -92,15 +85,7 @@ div.modal-content {
     }
   }
 
-  div.modal-footer {
-    border: none;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    padding: 0;
-  }
-
-  .upload-button {
+  &__upload-button {
     width: 248px;
     height: 56px;
     padding: 0;
@@ -115,7 +100,7 @@ div.modal-content {
     color: #242424;
   }
 
-  .exit-button {
+  &__exit-button {
     width: 248px;
     height: 56px;
     padding: 0;
@@ -130,54 +115,60 @@ div.modal-content {
     background-color: transparent;
     margin: 0;
   }
+
+  &__loading {
+    width: 87.2vw;
+    display: flex;
+    flex-direction: column;
+    margin: 72px 0 11px;
+
+    &-label {
+      font-family: "bebas-neue-by-fontfabric", sans-serif;
+      font-size: 14px;
+      font-weight: 400;
+      line-height: 14px;
+      letter-spacing: 4px;
+      margin-bottom: 16px;
+    }
+    &-progress {
+      width: 100%;
+      border: none;
+      height: 8px;
+      background-color: #ffffff80;
+
+      &::-webkit-progress-bar {
+        background-color: #ffffff80;
+      }
+
+      &::-webkit-progress-value {
+        background-color: #64eebc;
+      }
+
+      &::-moz-progress-bar {
+        background-color: #64eebc;
+      }
+    }
+
+    &-cancel {
+      font-family: "bebas-neue-by-fontfabric", sans-serif;
+      font-size: 16px;
+      font-weight: 400;
+      line-height: 16px;
+      letter-spacing: 4px;
+      text-align: end;
+      margin: 16px 0 0;
+      cursor: pointer;
+      display: block;
+    }
+  }
+
+  &__footer {
+    display: flex;
+    flex-direction: column;
+  }
 }
 
 // UploadingMovie
-
-.loading-container {
-  width: 87.2vw;
-  display: flex;
-  flex-direction: column;
-  font-family: "bebas-neue-by-fontfabric", sans-serif;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 14px;
-  letter-spacing: 4px;
-  margin-bottom: 8.3vh;
-
-  .cancel {
-    font-family: "bebas-neue-by-fontfabric", sans-serif;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 16px;
-    letter-spacing: 4px;
-    text-align: end;
-    margin: 18px 0 0;
-    cursor: pointer;
-    display: block;
-    width: fit-content;
-    align-self: end;
-  }
-}
-
-.progress-uploading {
-  width: 100%;
-  border: none;
-  height: 10px;
-  background-color: #ffffff80;
-
-  &::-webkit-progress-bar {
-    background-color: #ffffff80;
-  }
-
-  &::-webkit-progress-value {
-    background-color: #64eebc;
-  }
-
-  &::-moz-progress-bar {
-    background-color: #64eebc;
-  }
-}
 
 .uploading-divider {
   width: 248px;
@@ -279,7 +270,7 @@ div.modal-content {
     min-height: auto;
     padding: 24px;
 
-    div.modal-title {
+    div.add-movie__title {
       font-size: 20px;
       line-height: 20px;
       margin: 9px 0 48px;
