--- a/src/components/AddMovie/AddMovie.css
+++ b/src/components/AddMovie/AddMovie.css
@@ -6,75 +6,66 @@ div.modal-dialog {
   justify-content: center;
   align-items: center;
 }
-
-div.modal-content {
+div.modal-dialog div.modal-content {
   width: 100vw;
   min-height: 100vh;
   background: #242424;
   color: #ffffff;
   border: none;
   border-radius: 0;
-  padding: 2vh 6.4vw 0;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
 }
-div.modal-content div.modal-header {
-  border: none;
+
+.add-movie__content {
   display: flex;
   flex-direction: column;
-  padding: 0;
+  align-items: center;
 }
-div.modal-content div.modal-title {
+.add-movie__title {
   font-family: "bebas-neue-by-fontfabric", sans-serif;
   font-size: 22px;
   font-weight: 400;
   line-height: 22px;
   letter-spacing: 4px;
   color: #64eebc;
-  margin-bottom: 8.9vh;
+  margin: 96px 0 0;
 }
-div.modal-content .body-modal {
-  padding: 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-div.modal-content .container {
+.add-movie__container {
   width: 87.2vw;
   height: 10vh;
   border: 1px dashed #ffffff;
   padding: 0 10px;
-  margin: 0;
+  margin-top: 72px;
   box-sizing: border-box;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-div.modal-content .container .add-label {
+.add-movie__container-label {
   display: flex;
+  align-items: center;
   cursor: pointer;
-}
-div.modal-content .container p {
   font-family: "bebas-neue-by-fontfabric", sans-serif;
   font-size: 16px;
   font-weight: 400;
   line-height: 28px;
   letter-spacing: 4px;
-  text-align: center;
-  margin: 0;
 }
-div.modal-content .container .clip {
+.add-movie__container-clip {
+  width: 16px;
+  height: 16px;
   margin-right: 16px;
 }
-div.modal-content .divider {
+.add-movie__divider {
   width: 248px;
   margin-top: 6.9vh;
   border-bottom: 1px solid #ffffff;
   box-sizing: border-box;
   overflow: hidden;
 }
-div.modal-content .divider p {
+.add-movie__divider-title {
   font-family: "bebas-neue-by-fontfabric", sans-serif;
   font-size: 16px;
   font-weight: 400;
@@ -83,14 +74,7 @@ div.modal-content .divider p {
   text-align: center;
   margin-bottom: 8px;
 }
-div.modal-content div.modal-footer {
-  border: none;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  padding: 0;
-}
-div.modal-content .upload-button {
+.add-movie__upload-button {
   width: 248px;
   height: 56px;
   padding: 0;
@@ -104,7 +88,7 @@ div.modal-content .upload-button {
   margin: 11.8vh 0 3vh;
   color: #242424;
 }
-div.modal-content .exit-button {
+.add-movie__exit-button {
   width: 248px;
   height: 56px;
   padding: 0;
@@ -119,47 +103,72 @@ div.modal-content .exit-button {
   background-color: transparent;
   margin: 0;
 }
-
-.loading-container {
+.add-movie__loading {
   width: 87.2vw;
   display: flex;
   flex-direction: column;
+  margin: 72px 0 11px;
+}
+.add-movie__loading-label {
   font-family: "bebas-neue-by-fontfabric", sans-serif;
   font-size: 14px;
   font-weight: 400;
   line-height: 14px;
   letter-spacing: 4px;
-  margin-bottom: 8.3vh;
+  margin-bottom: 16px;
 }
-.loading-container .cancel {
+.add-movie__loading-progress {
+  width: 100%;
+  border: none;
+  height: 8px;
+  background-color: rgba(255, 255, 255, 0.5019607843);
+}
+.add-movie__loading-progress::-webkit-progress-bar {
+  background-color: rgba(255, 255, 255, 0.5019607843);
+}
+.add-movie__loading-progress::-webkit-progress-value {
+  background-color: #64eebc;
+}
+.add-movie__loading-progress::-moz-progress-bar {
+  background-color: #64eebc;
+}
+.add-movie__loading-progress-error {
+  width: 100%;
+  border: none;
+  height: 8px;
+  background-color: rgba(255, 255, 255, 0.5019607843);
+}
+.add-movie__loading-progress-error::-webkit-progress-value {
+  background-color: #ff0000;
+}
+.add-movie__loading-progress-error::-moz-progress-bar {
+  background-color: #ff0000;
+}
+.add-movie__loading-option {
   font-family: "bebas-neue-by-fontfabric", sans-serif;
   font-size: 16px;
   font-weight: 400;
   line-height: 16px;
   letter-spacing: 4px;
   text-align: end;
-  margin: 18px 0 0;
+  margin: 16px 0 0;
   cursor: pointer;
   display: block;
-  width: -moz-fit-content;
-  width: fit-content;
-  align-self: end;
 }
-
-.progress-uploading {
-  width: 100%;
-  border: none;
-  height: 10px;
-  background-color: rgba(255, 255, 255, 0.5019607843);
+.add-movie__loading-ready {
+  color: #64eebc;
+  font-family: "bebas-neue-by-fontfabric", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 16px;
+  letter-spacing: 4px;
+  text-align: end;
+  margin: 16px 0 0;
+  display: block;
 }
-.progress-uploading::-webkit-progress-bar {
-  background-color: rgba(255, 255, 255, 0.5019607843);
-}
-.progress-uploading::-webkit-progress-value {
-  background-color: #64eebc;
-}
-.progress-uploading::-moz-progress-bar {
-  background-color: #64eebc;
+.add-movie__footer {
+  display: flex;
+  flex-direction: column;
 }
 
 .uploading-divider {
@@ -250,7 +259,7 @@ div.modal-content .exit-button {
     min-height: auto;
     padding: 24px;
   }
-  div.modal-content div.modal-title {
+  div.modal-content div.add-movie__title {
     font-size: 20px;
     line-height: 20px;
     margin: 9px 0 48px;
