--- a/src/components/AppContainer/AppContainer.css
+++ b/src/components/AppContainer/AppContainer.css
@@ -1,26 +1,42 @@
+.app-container__loading-message {
+  font-family: "bebas-neue-by-fontfabric", sans-serif;
+  font-size: 28px;
+  font-weight: 700;
+  line-height: 28px;
+  letter-spacing: 4px;
+  text-align: center;
+  color: #64eebc;
+  margin-top: 48vh;
+}
+.app-container__loading-message span {
+  font-weight: 300;
+}
+
 .app-container {
   position: relative;
   background: #242424;
   min-height: 100vh;
 }
-
-.content-container {
+.app-container__content {
   position: relative;
   z-index: 1;
 }
-
-.background-image {
+.app-container__body {
+  padding: 28vh 7% 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.app-container__background {
   width: 100%;
-  height: 561px;
+  height: 60vh;
   background-size: cover;
-  background-position-x: center;
-  background-position-y: center;
+  background-position: center;
   position: absolute;
   top: 0;
   left: 0;
 }
-
-.gradient-overlay {
+.app-container__gradient-overlay {
   background: linear-gradient(180deg, rgba(36, 36, 36, 0) 0%, #242424 100%);
   height: 23.8vh;
   width: 100%;
@@ -29,35 +45,24 @@
   left: 0;
 }
 
-.loading-message {
-  font-family: "bebas-neue-by-fontfabric", sans-serif;
-  font-size: 28px;
-  font-weight: 700;
-  line-height: 28px;
-  letter-spacing: 4px;
-  text-align: center;
-  color: #64EEBC;
-  margin-top: 48vh;
-}
-.loading-message span {
-  font-weight: 300;
-}
-
 @media screen and (min-width: 900px) {
-  .background-image {
-    height: 100%;
+  .app-container__background {
+    height: 65vh;
     background-position: center;
-  }
-  .gradient-overlay {
-    height: 60vh;
   }
 }
 @media screen and (min-width: 1366px) {
-  .body {
-    display: flex;
+  .app-container__body {
+    padding: 8vh 7% 8vh;
+    flex-direction: row;
     justify-content: space-between;
+    align-items: end;
   }
-  .gradient-overlay {
+  .app-container__background {
+    height: 100%;
+    background-position: center;
+  }
+  .app-container__gradient-overlay {
     display: none;
   }
 }/*# sourceMappingURL=AppContainer.css.map */
