--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -1,60 +1,23 @@
-.background {
+.menu {
   width: 100vw;
   height: 100vh;
   background: rgba(0, 0, 0, 0.4078431373);
   position: fixed;
-  top: 60px;
+  top: 0;
   left: 0;
   z-index: 3;
+  overflow-y: scroll;
 }
-
-.menu-dropdown {
-  width: 100vw;
+.menu__dropdown {
   min-height: 100vh;
   background-color: #242424;
-  padding: 2vh 6.4vw 2vh;
-  overflow: scroll;
 }
-
-.menu-dropdown::-webkit-scrollbar {
+.menu__dropdown::-webkit-scrollbar {
   width: 0px;
 }
-
-.menu-header {
+.menu__content {
   width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 7.7vh;
-}
-
-.close-button {
-  width: 15px;
-  height: 15px;
-  margin-right: 12px;
-  cursor: pointer;
-}
-
-.menu-logo {
-  font-family: "bebas-neue-by-fontfabric", sans-serif;
-  font-size: 28px;
-  font-weight: 700;
-  line-height: 28px;
-  letter-spacing: 4px;
-  text-align: center;
-  color: #64EEBC;
-}
-
-.menu-logo2 {
-  font-weight: 300;
-}
-
-.notification-icon {
-  display: none;
-}
-
-.content {
-  width: 100%;
+  padding: 64px 7% 48px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -65,12 +28,10 @@
   letter-spacing: 4px;
   color: #ffffff;
 }
-
-.options p {
-  margin: 0 0 4.9vh 0;
+.menu__options p {
+  margin: 0 0 40px 0;
 }
-
-.menu-add-movie {
+.menu__add-movie {
   font-family: "bebas-neue-by-fontfabric", sans-serif;
   font-size: 16px;
   font-weight: 700;
@@ -80,65 +41,54 @@
   background: transparent;
   border: none;
   display: flex;
-  margin: 3vh 0 7.9vh;
+  margin: 24px 0 64px;
   padding: 0;
   align-items: center;
 }
-
-.menu-plus-icon {
+.menu__plus-icon {
   width: 14px;
   height: 14px;
   margin: 0 12px 1px 0;
 }
 
 @media screen and (min-width: 900px) {
-  .background {
-    top: 0;
-  }
-  .menu-dropdown {
+  .menu__dropdown {
     width: 53vw;
     height: 100vh;
     position: fixed;
     top: 0;
     right: 0;
-    padding: 3.4vh 7.2vw 3.4vh 6.1vw;
+    padding: 32px 7% 82px 6.1%;
     background-color: #242424;
     display: flex;
     flex-direction: column;
     align-items: center;
+    overflow-y: scroll;
   }
-  .menu-header {
+  .menu__header {
     width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
   }
-  .section-menu {
-    justify-content: end;
-  }
-  .close-button {
+  .menu__close-button {
     width: 18px;
     height: 18px;
+    cursor: pointer;
   }
-  .menu-logo {
-    display: none;
-  }
-  .notification-icon {
-    display: block;
-  }
-  .content {
+  .menu__content {
     font-size: 22px;
     line-height: 22px;
+    padding: 85px 0 0;
   }
-  .options p {
-    margin: 0 0 4.3vh 0;
-  }
-  .menu-add-movie {
+  .menu__add-movie {
     font-size: 22px;
     line-height: 22px;
     letter-spacing: 4px;
     color: #ffffff;
-    margin: 3.4vh 0 7.7vh;
-    padding: 0;
+    margin: 32px 0 72px;
   }
-  .menu-plus-icon {
+  .menu__plus-icon {
     width: 14px;
     height: 14px;
     margin: 0px 12px 2px 0px;
