--- a/src/components/MobileMenuHeader/MobileMenuHeader.scss
+++ b/src/components/MobileMenuHeader/MobileMenuHeader.scss
@@ -2,7 +2,7 @@
   padding-top: 16px;
   padding-left: 7%;
   padding-right: 7%;
-  margin: 0 auto;
+  margin: 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
