--- a/src/components/MovieList/MovieList.css
+++ b/src/components/MovieList/MovieList.css
@@ -1,11 +1,10 @@
 .movie-list {
   width: -moz-fit-content;
   width: fit-content;
-  margin: 7.9vh auto 0;
   box-sizing: border-box;
 }
-.movie-list .popular-link {
-  font-family: "bebas-neue-by-fontfabric";
+.movie-list__popular-link {
+  font-family: "bebas-neue-by-fontfabric", sans-serif;
   font-size: 18px;
   font-weight: 200;
   line-height: 18px;
@@ -17,13 +16,13 @@
   margin: 0 auto 0;
   padding: 0;
 }
-.movie-list .dropdown-arrow {
+.movie-list__dropdown-arrow {
   margin: 4px 0 0 11px;
   vertical-align: top;
   width: 13px;
   height: 8px;
 }
-.movie-list .dropdown-options {
+.movie-list__dropdown-options {
   width: 100vw;
   height: 112px;
   position: fixed;
@@ -35,15 +34,16 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  box-shadow: 4px 10px 10px 2px rgba(0, 0, 0, 0.5);
 }
-.movie-list .dropdown-options .dropdown-option-container {
+.movie-list__dropdown-option-container {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-.movie-list .dropdown-options .dropdown-option {
+.movie-list__dropdown-option {
   position: relative;
-  font-family: "bebas-neue-by-fontfabric";
+  font-family: "bebas-neue-by-fontfabric", sans-serif;
   font-size: 16px;
   font-weight: 200;
   line-height: 16px;
@@ -53,34 +53,34 @@
   cursor: pointer;
   margin: 0;
 }
-.movie-list .dropdown-options .vector {
+.movie-list__vector {
   width: 12px;
   height: 8px;
 }
-.movie-list .movie-thumbnails {
+.movie-list__movie-thumbnails {
   display: flex;
   flex-direction: column;
 }
-.movie-list .first-movie-thumbnail {
+.movie-list__first-movie-thumbnail {
   margin: 32px auto 20px;
   position: relative;
   cursor: pointer;
 }
-.movie-list .movie-thumbnail {
+.movie-list__movie-thumbnail {
   margin: 0 auto 20px;
   position: relative;
   cursor: pointer;
 }
-.movie-list .last-movie-thumbnail {
+.movie-list__last-movie-thumbnail {
   margin: 0 auto 52px;
   position: relative;
   cursor: pointer;
 }
-.movie-list .thumbnail-image {
+.movie-list__thumbnail-image {
   width: 327px;
   height: 172px;
 }
-.movie-list .thumbnail-overlay {
+.movie-list__thumbnail-overlay {
   position: absolute;
   width: 327px;
   padding: 0 5px;
@@ -93,15 +93,13 @@
   overflow: hidden;
   transition: background 0.3s ease-in;
 }
-.movie-list .thumbnail-overlay .play-title {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
+.movie-list__play-title {
   overflow: hidden;
   color: transparent;
   transition: 0.3s;
+  z-index: 1;
 }
-.movie-list .thumbnail-overlay .list-play-button {
+.movie-list__play-button {
   width: 48px;
   height: 48px;
   margin: 0 auto 24px;
@@ -110,8 +108,8 @@
   background-repeat: no-repeat;
   z-index: 1;
 }
-.movie-list .thumbnail-overlay .movie-title {
-  font-family: "bebas-neue-by-fontfabric";
+.movie-list__movie-title {
+  font-family: "bebas-neue-by-fontfabric", sans-serif;
   font-size: 16px;
   font-weight: 400;
   line-height: 16px;
@@ -121,7 +119,7 @@
   margin: 0 0 32px;
   z-index: 1;
 }
-.movie-list .thumbnail-overlay .rating-release {
+.movie-list__rating-release {
   display: none;
   flex-direction: row;
   justify-content: space-between;
@@ -129,13 +127,13 @@
   overflow: hidden;
   margin: 16px 24px 24px 24px;
 }
-.movie-list .thumbnail-overlay .star {
+.movie-list__star {
   width: 12px;
   height: 12px;
   margin-right: 6px;
 }
-.movie-list .thumbnail-overlay .rating {
-  font-family: "bebas-neue-by-fontfabric";
+.movie-list__rating {
+  font-family: "bebas-neue-by-fontfabric", sans-serif;
   font-weight: 400;
   font-size: 14px;
   line-height: 12px;
@@ -144,15 +142,15 @@
   display: flex;
   align-items: center;
 }
-.movie-list .thumbnail-overlay .release {
-  font-family: "bebas-neue-by-fontfabric";
+.movie-list__release {
+  font-family: "bebas-neue-by-fontfabric", sans-serif;
   font-weight: 400;
   font-size: 14px;
   line-height: 12px;
   letter-spacing: 2px;
   color: #ffffff;
 }
-.movie-list .thumbnail-overlay .thumbnail-gradient-overlay {
+.movie-list__thumbnail-gradient-overlay {
   background: linear-gradient(180deg, rgba(0, 0, 0, 0) 22.78%, #000000 122.69%);
   width: 327px;
   height: 126px;
@@ -160,11 +158,11 @@
   bottom: 0;
   left: 0;
 }
-.movie-list .thumbnail-overlay:hover {
+.movie-list__thumbnail-overlay:hover {
   background: rgba(36, 36, 36, 0.6980392157);
   padding: 0;
 }
-.movie-list .thumbnail-overlay:hover .play-title {
+.movie-list__thumbnail-overlay:hover .movie-list__play-title {
   display: flex;
   flex-direction: row;
   justify-content: start;
@@ -173,36 +171,35 @@
   margin-bottom: 20px;
   width: 100%;
 }
-.movie-list .thumbnail-overlay:hover .play-title .list-play-button {
+.movie-list__thumbnail-overlay:hover .movie-list__play-title .movie-list__play-button {
   width: 32px;
   height: 32px;
   margin: 0 16px 0 24px;
 }
-.movie-list .thumbnail-overlay:hover .play-title .list-play-button:hover {
+.movie-list__thumbnail-overlay:hover .movie-list__play-title .movie-list__play-button:hover {
   background: url("../../../public/img/play-hover.png");
   background-size: contain;
   background-repeat: no-repeat;
 }
-.movie-list .thumbnail-overlay:hover .play-title .movie-title {
+.movie-list__thumbnail-overlay:hover .movie-list__play-title .movie-list__movie-title {
   width: 243px;
   margin: 0;
   text-align: start;
 }
-.movie-list .thumbnail-overlay:hover .rating-release {
+.movie-list__thumbnail-overlay:hover .movie-list__rating-release {
   display: flex;
 }
-.movie-list .thumbnail-overlay:hover .thumbnail-gradient-overlay {
+.movie-list__thumbnail-overlay:hover .movie-list__thumbnail-gradient-overlay {
   display: none;
 }
 
 @media screen and (min-width: 480px) {
-  .movie-list .dropdown-options {
+  .movie-list__dropdown-options {
     width: 300px;
     height: 102px;
     position: absolute;
     left: 50%;
     bottom: initial;
-    margin-top: 8px;
     padding: 30px 24px 24px;
     box-sizing: border-box;
     transform: translate(-50%);
@@ -212,7 +209,7 @@
   .movie-list {
     width: 87.2vw;
   }
-  .movie-list .movie-thumbnails {
+  .movie-list__movie-thumbnails {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
@@ -220,85 +217,84 @@
     flex-wrap: wrap;
     padding-bottom: 7.9vh;
   }
-  .movie-list .first-movie-thumbnail {
+  .movie-list__first-movie-thumbnail {
     margin: 28px 20px 0 0;
   }
-  .movie-list .movie-thumbnail {
+  .movie-list__movie-thumbnail {
     margin: 28px 20px 0 0;
   }
-  .movie-list .last-movie-thumbnail {
+  .movie-list__last-movie-thumbnail {
     margin: 28px 20px 0 0;
   }
-  .movie-list .thumbnail-image {
+  .movie-list__thumbnail-image {
     width: 220px;
     height: 146px;
   }
-  .movie-list .thumbnail-overlay {
+  .movie-list__thumbnail-overlay {
     width: 220px;
     padding: 0 10px;
   }
-  .movie-list .thumbnail-overlay .thumbnail-gradient-overlay {
+  .movie-list__thumbnail-gradient-overlay {
     width: 220px;
     height: 100px;
   }
-  .movie-list .thumbnail-overlay .list-play-button {
+  .movie-list__play-button {
     width: 40px;
     height: 40px;
     margin: 0 auto 23px;
   }
-  .movie-list .thumbnail-overlay .movie-title {
+  .movie-list__movie-title {
     margin: 0 0 14px;
   }
-  .movie-list .thumbnail-overlay .rating-release {
+  .movie-list__rating-release {
     margin: 0 16px 16px 16px;
   }
-  .movie-list .thumbnail-overlay:hover .play-title {
+  .movie-list__thumbnail-overlay:hover .movie-list__play-title {
     margin-bottom: 20px;
   }
-  .movie-list .thumbnail-overlay:hover .play-title .list-play-button {
+  .movie-list__thumbnail-overlay:hover .movie-list__play-title .movie-list__play-button {
     width: 24px;
     height: 24px;
     margin: 0 12px 0 16px;
   }
-  .movie-list .thumbnail-overlay:hover .play-title .movie-title {
+  .movie-list__thumbnail-overlay:hover .movie-list__play-title .movie-list__movie-title {
     width: 152px;
   }
 }
 @media screen and (min-width: 1101px) {
-  .movie-list .last-movie-thumbnail {
+  .movie-list__last-movie-thumbnail {
     margin: 28px 0 0 0;
   }
 }
 @media screen and (min-width: 1366px) {
   .movie-list {
     width: 220px;
-    height: 746.8px;
-    margin: 80px 7.2vw 0;
+    min-height: 695px;
   }
-  .movie-list .movie-thumbnails {
+  .movie-list__movie-thumbnails {
     flex-direction: column;
     padding-bottom: 0;
   }
-  .movie-list .dropdown-options {
+  .movie-list__dropdown-options {
     width: 241px;
     height: 102px;
     background: url("../../../public/img/dropdown.png");
     background-size: cover;
     position: absolute;
     left: initial;
-    right: 7.2vw;
+    right: 6.9%;
     transform: initial;
     margin-top: 8px;
     padding: 30px 24px 24px;
     box-sizing: border-box;
   }
-  .movie-list .first-movie-thumbnail {
+  .movie-list__first-movie-thumbnail {
     margin: 32px auto 20px;
   }
-  .movie-list .movie-thumbnail {
+  .movie-list__movie-thumbnail {
     margin: 0 auto 20px;
   }
-  .movie-list .last-movie-thumbnail {
-    margin: 0 auto 52px;
+  .movie-list__last-movie-thumbnail {
+    margin: 0;
   }
 }/*# sourceMappingURL=MovieList.css.map */
