--- a/src/components/MovieList/MovieList.scss
+++ b/src/components/MovieList/MovieList.scss
@@ -31,6 +31,7 @@ $primary-color: #ffffff;
     height: 112px;
     position: fixed;
     bottom: 0;
+    left:0;
     z-index: 2;
     padding: 32px 24px;
     box-sizing: border-box;
